force-app/main/default/objects/Transaction_Category__c/Transaction_Category__c.object-meta.xml
<CustomObject>
    <description>Defines categories used to classify and filter commission-eligible transactions for plan calculations and quota credit assignment.</description>
    <label>Transaction Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>