force-app/main/default/objects/Transaction_Category__c/fields/Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Category_Code__c</fullName>
    <description>Unique code identifying this transaction category. Used as an external identifier for integrations and data loads.</description>
    <externalId>true</externalId>
    <label>Category Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>