force-app/main/default/objects/Transaction_Category__c/fields/Category_Source__c.field-meta.xml
<CustomField>
    <fullName>Category_Source__c</fullName>
    <description>Defines the source mechanism used to assign transactions to this category.</description>
    <label>Category Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record_Type</fullName>
                <label>Record Type</label>
            </value>
            <value>
                <fullName>Picklist_Field</fullName>
                <label>Picklist Field</label>
            </value>
            <value>
                <fullName>Custom_Field</fullName>
                <label>Custom Field</label>
            </value>
            <value>
                <fullName>All_Deals</fullName>
                <label>All Deals</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>