force-app/main/default/objects/Transaction_Category__c/fields/Category_Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Category_Source_Field__c</fullName>
    <description>API name of the field used as the category source when Category Source is Picklist Field or Custom Field.</description>
    <label>Category Source Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>