force-app/main/default/objects/Transaction_Category__c/fields/Category_Source_Value__c.field-meta.xml
<CustomField>
    <fullName>Category_Source_Value__c</fullName>
    <description>The expected value of the category source field that qualifies a transaction for this category.</description>
    <label>Category Source Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>