force-app/main/default/objects/Transaction_Category__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this transaction category is currently active and available for use in plan configurations.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>