force-app/main/default/objects/Transaction_Category__c/fields/Probability_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Probability_Threshold__c</fullName>
    <description>Minimum opportunity probability percentage required for a transaction to qualify under this category.</description>
    <label>Probability Threshold</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>