force-app/main/default/objects/Transaction_Category__c/fields/Quota_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quota_Credit_Amount__c</fullName>
    <description>Fixed currency amount to apply as quota credit when Quota Credit Source is Fixed Amount.</description>
    <label>Quota Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>