force-app/main/default/objects/Transaction_Category__c/fields/Quota_Credit_Field__c.field-meta.xml
<CustomField>
    <fullName>Quota_Credit_Field__c</fullName>
    <description>API name of the custom field used for quota credit when Quota Credit Source is Custom Field.</description>
    <label>Quota Credit Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>