force-app/main/default/objects/Transaction_Category__c/fields/Quota_Credit_Pct__c.field-meta.xml
<CustomField>
    <fullName>Quota_Credit_Pct__c</fullName>
    <description>Percentage of the commissionable amount to apply as quota credit when Quota Credit Source is Percentage Of Commissionable.</description>
    <label>Quota Credit Pct</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>