force-app/main/default/objects/Transaction_Category__c/fields/Quota_Credit_Source__c.field-meta.xml
<CustomField>
    <fullName>Quota_Credit_Source__c</fullName>
    <description>Determines how quota credit is calculated for transactions in this category.</description>
    <label>Quota Credit Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same_As_Commissionable</fullName>
                <label>Same As Commissionable</label>
            </value>
            <value>
                <fullName>Custom_Field</fullName>
                <label>Custom Field</label>
            </value>
            <value>
                <fullName>Percentage_Of_Commissionable</fullName>
                <label>Percentage Of Commissionable</label>
            </value>
            <value>
                <fullName>Fixed_Amount</fullName>
                <label>Fixed Amount</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>