force-app/main/default/objects/Transaction_Category__c/fields/Stage_Filter__c.field-meta.xml
<CustomField>
    <fullName>Stage_Filter__c</fullName>
    <defaultValue>&quot;Closed Won&quot;</defaultValue>
    <description>Opportunity stage(s) used to filter eligible transactions for this category.</description>
    <label>Stage Filter</label>
    <length>200</length>
    <type>Text</type>
</CustomField>